# niche-finder

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260405_0001_initial.py  20260406_0002_collection_scheduler.py  20260406_0003_collection_schedule_source_unique.py  20260406_0004_online_demand_fields.py  20260407_0006_keyword_difficulty.py  (+2 more)
deploy/: ubuntu.md
prompts/: candidate_generation.md  final_analysis.md  kosis_industry_mapping.md  naver_shopping_category_mapping.md  query_expansion.md  seed_generation.md
references/: idea-quality-improvements.md  output-improvement-plan-20260413.md  workflow-principles.md
scripts/: bootstrap_collection_schedules.py  install_auto_suspend_launchers.sh  migrate_sqlite_to_postgres.py  migrate_vertical_market_seeds.py  seed_demo.py  smoke_test.py
tasks/: todo.md
tests/: test_auto_suspend_state.py  test_bootstrap_auto_seeds.py  test_brainstorming_v2_service.py  test_budget_allocator_service.py  test_daily_report_service.py  test_database_config.py  test_datalab_service.py  test_gmail_service.py  test_google_search_service.py  test_kosis_employee_service.py  test_llm_seed_generation.py  test_naver_ads_keyword_service.py  test_naver_search_service.py  test_naver_shopping_insight_service.py  test_pipeline_end_to_end.py  test_pipeline_search_weighting.py  test_pricing_evidence_service.py  test_public_data_opportunity_service.py  test_report_service.py  test_scoring_service.py  test_suspend_watchdog.py  test_telegram_service.py  test_vertical_seed_migration_service.py
(+87 files in other folders)
